fix scrollbar, add minWidth/minHeight at BrowserWindow, fix Grid layout

--- a/app/index.global.css
+++ b/app/index.global.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  overflow: hidden;
+  overflow: auto;
 }
 
 body:before {
